server now communicates with load balancer correctly